--- a/front/controle-front/package.json
+++ b/front/controle-front/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@quasar/extras": "^1.17.0",
     "quasar": "^2.18.5",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.10.0",
