--- a/back/composer.json
+++ b/back/composer.json
@@ -1,10 +1,12 @@
 {
-    "require": {
-        "flightphp/core": "^3.17"
-    },
-    "autoload": {
-        "psr-4": {
-	    "Mp\\Controle\\": "src/"
-	}
+  "require": {
+    "flightphp/core": "^3.17",
+    "vlucas/phpdotenv": "^5.6"
+  },
+  "autoload": {
+    "psr-4": {
+      "Mp\\Controle\\": "src/"
     }
+  },
+  "schema": "https://getcomposer.org/schema.json"
 }
