--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.17.0",
+    "axios": "^1.13.2",
     "quasar": "^2.18.5",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
