--- a/back/composer.json
+++ b/back/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "flightphp/core": "^3.17",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "flightphp/container": "^1.3"
   },
   "autoload": {
     "psr-4": {
