feat: removido category do banco e alterado color

--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@quasar/extras": "^1.17.0",
     "axios": "^1.13.2",
+    "highcharts-vue": "^2.0.1",
     "pinia": "^3.0.4",
     "quasar": "^2.18.5",
     "vue": "^3.5.22",
