--- a/back/composer.json
+++ b/back/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "flightphp/core": "^3.17",
     "vlucas/phpdotenv": "^5.6",
-    "flightphp/container": "^1.3"
+    "flightphp/container": "^1.3",
+    "firebase/php-jwt": "^6.11"
   },
   "autoload": {
     "psr-4": {
